--- a/VD10.html
+++ b/VD10.html
@@ -1,13 +1,10 @@
-<html>
-<body>
+
 	<frameset rows="30%,*,20%">
 <noframes>Your browser do not handle frames!</noframes>
-<frame name="tren" src="Vidu5.html" noresize>
+<frame name="tren" src="VD5.html" noresize>
 <frameset cols="40%,60%">
-<frame name="trai" src="Vidu1.html">
-<frame name="phai" src="Vidu8.html" scrolling=auto>
+<frame name="trai" src="VD1.html">
+<frame name="phai" src="VD8.html" scrolling=auto>
 </frameset>
-<frame name="duoi" src="Vidu4.html">
+<frame name="duoi" src="VD4.html">
 </frameset>
-</html>
-</body>
