--- a/EX3.html
+++ b/EX3.html
@@ -9,3 +9,6 @@ Last name:
 <br>
 <input type="radio" name="sex" value="female"> Female
 </form>
+<p>
+	<a href="https://my-quyen.github.io/KC326-test/EX10.html">Quay lại trang chủ</a>
+</p>
