--- a/EX4.html
+++ b/EX4.html
@@ -6,3 +6,6 @@ Tôi thích chó
 <input type="checkbox" name="mèo" value="yes">
 Tôi thích mèo
 </form>
+<p>
+	<a href="https://my-quyen.github.io/KC326-test/EX10.html">Quay lại trang chủ</a>
+</p>
