--- a/EX5.html
+++ b/EX5.html
@@ -4,3 +4,6 @@
 <input type="button" onclick="alert('Chào mừng bạn đến với github')" value="Click Me!">
 </body>
 </html>
+<p>
+	<a href="https://my-quyen.github.io/KC326-test/EX10.html">Quay lại trang chủ</a>
+</p>
