--- a/EX6.html
+++ b/EX6.html
@@ -3,3 +3,6 @@
 	<input type="submit" value="Submit">
 </form>
 <p> If you click submit, without filling out the text field, your browser will display an error message.</p>
+<p>
+	<a href="https://my-quyen.github.io/KC326-test/EX10.html">Quay lại trang chủ</a>
+</p>
