--- a/EX7.html
+++ b/EX7.html
@@ -6,3 +6,6 @@ User password:<br>
 <input type="password" name="psw">
 </form>
 <p>The characters in a password field are masked (shown as asterisks or circles).</p>
+<p>
+	<a href="https://my-quyen.github.io/KC326-test/EX10.html">Quay lại trang chủ</a>
+</p>
