--- a/EX8.html
+++ b/EX8.html
@@ -8,3 +8,6 @@
 	<br><br>
 	<input type="submit">
 </form>
+<p>
+	<a href="https://my-quyen.github.io/KC326-test/EX10.html">Quay lại trang chủ</a>
+</p>
