--- a/EX9.html
+++ b/EX9.html
@@ -75,3 +75,6 @@ The cat was playing in the garden.
 				<br>
 				<input type="submit"> <input type="reset">
 			</form>
+<p>
+	<a href="https://my-quyen.github.io/KC326-test/EX10.html">Quay lại trang chủ</a>
+</p>
