--- a/VD10.html
+++ b/VD10.html
@@ -8,3 +8,6 @@
 </frameset>
 <frame name="duoi" src="VD4.html">
 </frameset>
+<p>
+	<a href="https://my-quyen.github.io/KC326-test/EX10.html">Quay lại trang chủ</a>
+</p>
