--- a/EX10.html
+++ b/EX10.html
@@ -103,6 +103,19 @@
 	</p>
 </td>
 </tr>
-
+<tr>
+<td>
+	<p>
+		<a href="https://my-quyen.github.io/KC326-test/VD10.html">VD9</a>
+	</p>
+</td>
+</tr>
+<tr>
+	<td>
+		<p>
+			<a href="https://my-quyen.github.io/KC326-test/VD11.html">VD10</a>
+		</p>
+	</td>
+	</tr>
 </body>
 </html>
