--- a/VD1.html
+++ b/VD1.html
@@ -15,3 +15,6 @@
 	<!-- Day la 1 ghi chu -->
 </body>
 </html>
+<p>
+	<a href="https://my-quyen.github.io/KC326-test/EX10.html">Quay lại trang chủ</a>
+</p>
