--- a/VD2.html
+++ b/VD2.html
@@ -16,3 +16,6 @@
 	Doan van ban co <sup>chi so tren</sup>
 </body>
 </html>
+<p>
+	<a href="https://my-quyen.github.io/KC326-test/EX10.html">Quay lại trang chủ</a>
+</p>
