--- a/VD3.html
+++ b/VD3.html
@@ -16,3 +16,6 @@
 	d a n g dinh truoc </pre>
 </body>
 </html>
+<p>
+	<a href="https://my-quyen.github.io/KC326-test/EX10.html">Quay lại trang chủ</a>
+</p>
