--- a/VD4.html
+++ b/VD4.html
@@ -7,3 +7,6 @@
 	&quot;	&copy;	&reg;	&yen;
 </body>
 </html>
+<p>
+	<a href="https://my-quyen.github.io/KC326-test/EX10.html">Quay lại trang chủ</a>
+</p>
