--- a/VD5.html
+++ b/VD5.html
@@ -9,3 +9,6 @@ se lien ket den chinh ban than trang web.
 </p>
 </body>
 </html>
+<p>
+	<a href="https://my-quyen.github.io/KC326-test/EX10.html">Quay lại trang chủ</a>
+</p>
