--- a/VD6.html
+++ b/VD6.html
@@ -20,3 +20,6 @@
 <p> Day la noi dung chuong 8 </p>
 </body>
 </html>
+<p>
+	<a href="https://my-quyen.github.io/KC326-test/EX10.html">Quay lại trang chủ</a>
+</p>
