--- a/VD7.html
+++ b/VD7.html
@@ -15,3 +15,6 @@ Chuong 10<br>
 Chuong 11<br>
 </body>
 </html>
+<p>
+	<a href="https://my-quyen.github.io/KC326-test/EX10.html">Quay lại trang chủ</a>
+</p>
