--- a/VD8.html
+++ b/VD8.html
@@ -16,3 +16,6 @@
 	Gui mail den tac gia </a>
 </body>
 </html>
+<p>
+	<a href="https://my-quyen.github.io/KC326-test/EX10.html">Quay lại trang chủ</a>
+</p>
