--- a/EX10.html
+++ b/EX10.html
@@ -1,7 +1,15 @@
 <html>
-<body>
-<b> TỔNG HỢP CÁC VÍ DỤ </b>
-<table border="1">
+<body background="https://img.freepik.com/free-vector/paper-style-white-monochrome-background_23-2149012950.jpg?size=626&ext=jpg">
+<style>
+b, table {
+	color: rgba(142, 68, 173, 1);
+	font-size: 30px;
+	font-family: verdana;
+	font-style: bold;
+}
+</style>
+	<h2 align="center"> <b> TỔNG HỢP CÁC VÍ DỤ </b></h2>
+<table border="1" align="center">
 <tr>
 <th>Buổi 1</th>
 <th>Buổi 2</th>
