--- a/EX10.html
+++ b/EX10.html
@@ -26,6 +26,11 @@ b, table {
 	<a href="https://my-quyen.github.io/KC326-test/EX1.html">VD1</a>
 </p>
 </td>
+<td>
+<p>
+	<a href="https://my-quyen.github.io/KC326-test/EX11.html">VD1</a>
+	</p>
+	</td>
 </tr>
 <tr>
 <td>
@@ -38,6 +43,11 @@ b, table {
 		<a href="https://my-quyen.github.io/KC326-test/EX2.html">VD2</a>
 	</p>
 </td>
+<td>
+<p>
+	<a href="https://my-quyen.github.io/KC326-test/EX12.html">VD2</a>
+	</p>
+	</td>
 </tr>
 <tr>
 <td>
