--- a/EX12.html
+++ b/EX12.html
@@ -35,6 +35,6 @@ h3 {
 </body>
 </head>
 </html>
-<p>
+<p align="center">
 	<a href="https://my-quyen.github.io/KC326-test/EX10.html">Quay lại trang chủ</a>
 </p>
