--- a/EX10.html
+++ b/EX10.html
@@ -43,6 +43,11 @@ b, table {
 		<a href="https://my-quyen.github.io/KC326-test/EX2.html">VD2</a>
 	</p>
 </td>
+<td>
+<p>
+	<a href="https://my-quyen.github.io/KC326-test/EX13.html">VD2</a>
+	</p>
+	</td>
 </tr>
 <tr>
 <td>
