--- a/EX10.html
+++ b/EX10.html
@@ -14,6 +14,7 @@ b, table {
 <th>Buổi 1</th>
 <th>Buổi 2</th>
 <th>Buổi 3</th>
+<th>Buổi 4</th>
 </tr>
 <tr>
 <td>
@@ -31,6 +32,11 @@ b, table {
 	<a href="https://my-quyen.github.io/KC326-test/EX11.html">VD1</a>
 	</p>
 	</td>
+	<td>
+<p>
+<a href="https://my-quyen.github.io/KC326-test/bt1.html">VD1</a>
+</p>
+</td>
 </tr>
 <tr>
 <td>
@@ -48,6 +54,11 @@ b, table {
 	<a href="https://my-quyen.github.io/KC326-test/EX13.html">VD2</a>
 	</p>
 	</td>
+	<td>
+<p>
+<a href="https://my-quyen.github.io/KC326-test/bt2.html">VD2</a>
+</p>
+</td>
 </tr>
 <tr>
 <td>
@@ -59,6 +70,11 @@ b, table {
 	<p>
 		<a href="https://my-quyen.github.io/KC326-test/EX3.html">VD3</a>
 	</p>
+</td>
+	<td>
+<p>
+<a href="https://my-quyen.github.io/KC326-test/bt3.html">VD3</a>
+</p>
 </td>
 </tr>
 <tr>
@@ -72,6 +88,11 @@ b, table {
 		<a href="https://my-quyen.github.io/KC326-test/EX4.html">VD4</a>
 	</p>
 </td>
+	<td>
+<p>
+<a href="https://my-quyen.github.io/KC326-test/bt4.html">VD4</a>
+</p>
+</td>
 </tr>
 <tr>
 <td>
@@ -83,6 +104,11 @@ b, table {
 	<p>
 		<a href="https://my-quyen.github.io/KC326-test/EX5.html">VD5</a>
 	</p>
+</td>
+	<td>
+<p>
+<a href="https://my-quyen.github.io/KC326-test/bt5.html">VD5</a>
+</p>
 </td>
 </tr>
 <tr>
@@ -96,6 +122,11 @@ b, table {
 		<a href="https://my-quyen.github.io/KC326-test/EX6.html">VD6</a>
 	</p>
 </td>
+	<td>
+<p>
+<a href="https://my-quyen.github.io/KC326-test/bt6.html">VD6</a>
+</p>
+</td>
 </tr>
 <tr>
 <td>
@@ -108,6 +139,11 @@ b, table {
 		<a href="https://my-quyen.github.io/KC326-test/EX7.html">VD7</a>
 	</p>
 </td>
+	<td>
+<p>
+<a href="https://my-quyen.github.io/KC326-test/bt7.html">VD7</a>
+</p>
+</td>
 </tr>
 <tr>
 <td>
@@ -119,6 +155,11 @@ b, table {
 	<p>
 		<a href="https://my-quyen.github.io/KC326-test/EX8.html">VD8</a>
 	</p>
+</td>
+	<td>
+<p>
+<a href="https://my-quyen.github.io/KC326-test/bt8.html">VD8</a>
+</p>
 </td>
 </tr>
 <tr>
