--- a/jv6.html
+++ b/jv6.html
@@ -16,3 +16,6 @@
 	<p>The function returns a text.</p>
 </body>
 </html>
+<p>
+	<a href="https://my-quyen.github.io/KC326-test/jv13.html">Quay lại trang bài tập</a>
+</p>
