--- a/jv7.html
+++ b/jv7.html
@@ -18,3 +18,6 @@
 	<p>If the time on your browser is less than 10, you will get a "Good morning" greeting. Otherwise you will get a "Good day" greeting.</p>
 </body>
 </head></html>
+<p>
+	<a href="https://my-quyen.github.io/KC326-test/jv13.html">Quay lại trang bài tập</a>
+</p>
