--- a/jv8.html
+++ b/jv8.html
@@ -29,3 +29,6 @@ switch (theDay) {
 	</script>
 </body>
 </html>
+<p>
+	<a href="https://my-quyen.github.io/KC326-test/jv13.html">Quay lại trang bài tập</a>
+</p>
