--- a/jv9.html
+++ b/jv9.html
@@ -9,3 +9,6 @@
 	</script>
 	<p>Explanation:</p>
 	<p>This for loop starts with i=0.</p>
+	<p>
+	<a href="https://my-quyen.github.io/KC326-test/jv13.html">Quay lại trang bài tập</a>
+</p>
