--- a/index1.html
+++ b/index1.html
@@ -45,7 +45,7 @@
             Bài tập
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <li><a class="dropdown-item" href="#">Tính phương trình bật 2</a></li>
+            <li><a class="dropdown-item" href="https://my-quyen.github.io/KC326-test/java1.html">Tính phương trình bật 2</a></li>
             <li><a class="dropdown-item" href="#">Vẽ đồ thị</a></li>
           </ul>
         </li>
