--- a/java1.html
+++ b/java1.html
@@ -46,3 +46,6 @@ else{
 </form>
 </body>
 </html>
+<p align="center">
+ <a href="https://github.com/My-Quyen/KC326-test/java1.html">Quay lại trang chủ</a>
+</p>
