--- a/java1.html
+++ b/java1.html
@@ -47,5 +47,5 @@ else{
 </body>
 </html>
 <p align="center">
- <a href="https://github.com/My-Quyen/KC326-test/java1.html">Quay lại trang chủ</a>
+ <a href="https://my-quyen.github.io/KC326-test/index1.html">Quay lại trang chủ</a>
 </p>
